--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,12 @@ body{
   font-size: 1.5em;
   text-align: center;
 }
+.arrow-button{
+  border: none;
+  background: none;
+  padding: 0;
+  font: inherit;
+}
 #time{
   text-align: center;
   font-size: 3.0em;
@@ -89,10 +95,14 @@ body{
 #time-buttons{
   display: flex;
   justify-content: center;
-  padding: 0 20px;
   font-size: 1.5em;
 }
-#time-buttons p{
+#time-buttons button{
+  border: none;
+  background: none;
+  outline: none;
+  cursor: pointer;
+  font: inherit;
   padding: 0 20px;
 }
 
